LIB-674: accept homeTransactionId on acceptQuote
